--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# working files
+.vim/viminfo
+.vim/swaps/*
+.vim/undo
+.vim/backups
 .netrwhist
-vim/bundle
-vim/swapfiles
+
+# Folder view configuration files
+.DS_Store
+Desktop.ini
+
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+
