--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh'
+if-shell 'test "$(uname)" = "Darwin"' 'tmux set-option -g default-command "reattach-to-user-namespace -l zsh"'
 
 # split panes using | and -
 bind | split-window -h
