--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
-if-shell 'test "$(uname)" = "Darwin"' 'tmux set-option -g default-command "reattach-to-user-namespace -l zsh"'
+# OS X work around for libnotify
+if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
 
 # split panes using | and -
 bind | split-window -h
@@ -119,3 +120,5 @@ set -g message-fg colour232
 set -g message-bg colour166
 
 # }
+
+
