--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,6 +23,9 @@ bind -n S-Right next-window
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 
+# Enable window titles
+set-option -g set-titles on
+
 ######################
 ### DESIGN CHANGES ###
 ######################
