--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,9 @@ bind -n M-Down select-pane -D
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
+# Set default terminal to xterm
+set -g default-terminal "xterm"
+
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 
