--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
 # OS X work around for libnotify
 if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
 
-# split panes using | and - and open in present wordking directory
+# split panes using | and - and open in present working directory
 bind | split-window -h -c '#{pane_current_path}'
-bind - split-window -v
+bind - split-window -v '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 unbind '"'
 unbind %
