Fixed horizontal split binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-t
 
 # split panes using | and - and open in present working directory
 bind | split-window -h -c '#{pane_current_path}'
-bind - split-window -v '#{pane_current_path}'
+bind - split-window -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 unbind '"'
 unbind %
