--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,5 @@
+Include ~/.extra/ssh/config
+
 Host *
 	# Always use SSH2.
 	Protocol 2
@@ -13,3 +15,5 @@ Host *
 	TCPKeepAlive yes
 	ServerAliveInterval 20
 	ServerAliveCountMax 10
+
+        HashKnownHosts yes
