--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,9 @@ bind -n S-Right next-window
 # Set default terminal to xterm
 set -g default-terminal "xterm"
 
+# Renumber windows after closing
+set-option -g renumber-windows on
+
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 
