--- a/.ssh/config
+++ b/.ssh/config
@@ -4,6 +4,9 @@ Host *
 	# Always use SSH2.
 	Protocol 2
 
+        # Host keys the client accepts - order here is honored by OpenSSH
+        HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,ssh-rsa-cert-v01@openssh.com,ssh-ed25519,ssh-rsa,ecdsa-sha2-nistp521-cert-v01@openssh.com,ecdsa-sha2-nistp384-cert-v01@openssh.com,ecdsa-sha2-nistp256-cert-v01@openssh.com,ecdsa-sha2-nistp521,ecdsa-sha2-nistp384,ecdsa-sha2-nistp256 
+
 	# Use a shared channel for all sessions to the same host,
 	# instead of always opening a new one. This leads to much
 	# quicker connection times.
