Use true colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,7 +22,7 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 
 # Set default terminal to xterm
-set -g default-terminal "xterm"
+set -g default-terminal "xterm-256color"
 
 # Renumber windows after closing
 set-option -g renumber-windows on
@@ -32,6 +32,9 @@ set -g mouse on
 
 # Enable window titles
 set-option -g set-titles on
+
+# Enable truecolor
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 ######################
 ### DESIGN CHANGES ###
