--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,11 +2,13 @@
 if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
 
 # split panes using | and - and open in present working directory
-bind | split-window -h -c '#{pane_current_path}'
-bind - split-window -c '#{pane_current_path}'
+#bind | split-window -h -c '#{pane_current_path}'
+#bind - split-window -c '#{pane_current_path}'
+
+# Open new splits/panes in the current working directory
 bind c new-window -c '#{pane_current_path}'
-unbind '"'
-unbind %
+bind '"' split-window -h -c '#{pane_current_path}'
+bind % split-window -c '#{pane_current_path}'
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
