--- a/.config/iterm2/com.googlecode.iterm2.plist
+++ b/.config/iterm2/com.googlecode.iterm2.plist
@@ -125,7 +125,7 @@
 	<key>LoadPrefsFromCustomFolder</key>
 	<true/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~</string>
+	<string>~/Documents</string>
 	<key>NSNavPanelExpandedSizeForOpenMode</key>
 	<string>{712, 448}</string>
 	<key>NSQuotedKeystrokeBinding</key>
@@ -143,7 +143,7 @@
 	gAKACoAN0xAJChEVGVdOUy5rZXlzoxITFIADgASABaMWFxiABoAHgAiACVpJZGVudGlm
 	aWVyVVdpZHRoVkhpZGRlblEwI0BowAAAAAAACNIhIiMkWiRjbGFzc25hbWVYJGNsYXNz
 	ZXNcTlNEaWN0aW9uYXJ5oiMlWE5TT2JqZWN00xAJCicrGaMSExSAA4AEgAWjLC0YgAuA
-	DIAIgAlRMSNAdKGdsi0OVtIhIjM0Xk5TTXV0YWJsZUFycmF5ozM1JVdOU0FycmF5XxAP
+	DIAIgAlRMSNAc7Gdsi0OVtIhIjM0Xk5TTXV0YWJsZUFycmF5ozM1JVdOU0FycmF5XxAP
 	TlNLZXllZEFyY2hpdmVy0Tg5VUFycmF5gAEACAARABoAIwAtADIANwBGAEwAUQBcAGMA
 	ZgBoAGoAbABzAHsAfwCBAIMAhQCJAIsAjQCPAJEAnACiAKkAqwC0ALUAugDFAM4A2wDe
 	AOcA7gDyAPQA9gD4APwA/gEAAQIBBAEGAQ8BFAEjAScBLwFBAUQBSgAAAAAAAAIBAAAA
@@ -165,69 +165,71 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>593 255 815 149 0 0 1920 1177 </string>
+	<string>-1169 -21 713 138 -2560 -390 2560 1417 </string>
+	<key>NSWindow Frame SUStatusFrame</key>
+	<string>1080 966 400 129 0 0 2560 1418 </string>
+	<key>NSWindow Frame SUUpdateAlert</key>
+	<string>970 768 620 392 0 0 2560 1417 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>59 430 796 486 0 0 1920 1177 </string>
+	<string>1461 1527 796 486 1329 1050 2560 1417 </string>
+	<key>NSWindow Frame UKCrashReporter</key>
+	<string>230 833 592 584 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>1211 416 570 429 0 0 1920 1177 </string>
+	<string>2136 1145 1285 854 1329 1050 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>157 137 570 429 0 0 1920 1177 </string>
+	<string>1878 1896 585 429 1329 1050 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 10</key>
-	<string>478 549 570 429 0 0 1920 1177 </string>
+	<string>647 980 570 429 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 11</key>
-	<string>499 526 570 429 0 0 1920 1177 </string>
+	<string>710 711 570 429 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 12</key>
-	<string>520 503 570 429 0 0 1920 1177 </string>
+	<string>790 670 570 429 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 13</key>
-	<string>541 480 570 429 0 0 1920 1177 </string>
+	<string>1222 364 570 429 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 14</key>
-	<string>562 457 570 429 0 0 1920 1177 </string>
+	<string>630 967 570 429 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 15</key>
-	<string>583 434 570 429 0 0 1920 1177 </string>
+	<string>1336 1051 580 366 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 16</key>
-	<string>604 411 570 429 0 0 1920 1177 </string>
+	<string>320 661 825 366 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 17</key>
-	<string>625 388 570 429 0 0 1920 1177 </string>
+	<string>3967 507 580 366 2560 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 18</key>
-	<string>646 365 570 429 0 0 1920 1177 </string>
+	<string>805 661 580 366 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 19</key>
-	<string>667 342 570 429 0 0 1920 1177 </string>
+	<string>826 639 580 366 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
-	<string>755 589 570 429 0 0 1920 1177 </string>
+	<string>1942 2038 585 429 1329 1050 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 20</key>
-	<string>688 319 570 429 0 0 1920 1177 </string>
+	<string>10 226 580 366 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 21</key>
-	<string>709 296 570 429 0 0 1920 1177 </string>
+	<string>31 203 580 366 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 22</key>
-	<string>730 273 570 429 0 0 1920 1177 </string>
+	<string>224 35 580 366 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 23</key>
-	<string>751 250 570 429 0 0 1920 1177 </string>
+	<string>398 282 580 366 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 24</key>
-	<string>772 227 570 429 0 0 1920 1177 </string>
+	<string>94 134 580 366 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 25</key>
-	<string>793 204 570 429 0 0 1920 1177 </string>
+	<string>115 111 580 366 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 26</key>
-	<string>814 181 570 429 0 0 1920 1177 </string>
+	<string>136 88 580 366 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 27</key>
-	<string>897 370 962 684 0 0 1920 1177 </string>
-	<key>NSWindow Frame iTerm Window 28</key>
-	<string>856 135 570 429 0 0 1920 1177 </string>
-	<key>NSWindow Frame iTerm Window 29</key>
-	<string>891 504 570 429 0 0 1920 1177 </string>
+	<string>157 65 580 366 0 0 1680 1050 </string>
 	<key>NSWindow Frame iTerm Window 3</key>
-	<string>289 86 570 429 0 0 1920 1177 </string>
+	<string>742 207 570 429 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 4</key>
-	<string>310 744 570 429 0 0 1920 1177 </string>
+	<string>354 494 570 429 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 5</key>
-	<string>331 721 570 429 0 0 1920 1177 </string>
+	<string>859 598 570 429 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 6</key>
-	<string>614 209 570 429 0 0 1920 1177 </string>
+	<string>149 405 570 429 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 7</key>
-	<string>373 664 570 429 0 0 1920 1177 </string>
+	<string>281 214 822 616 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 8</key>
-	<string>394 641 570 429 0 0 1920 1177 </string>
+	<string>1053 598 570 429 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 9</key>
-	<string>436 595 570 429 0 0 1920 1177 </string>
+	<string>1395 641 570 429 0 0 2560 1417 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -1452,15 +1454,17 @@
 	<key>NoSyncHaveWarnedAboutPasteConfirmationChange</key>
 	<true/>
 	<key>NoSyncInstallationId</key>
-	<string>AFE23C42-B05F-474D-B1A4-8474D3102BB7</string>
+	<string>8A3D8F96-5311-4BB7-988A-C5B751E11853</string>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
 	<true/>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
 	<integer>0</integer>
 	<key>NoSyncPermissionToShowTip</key>
 	<false/>
+	<key>NoSyncSuppressMissingProfileInArrangementWarning</key>
+	<true/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
-	<real>579932568.71883702</real>
+	<real>523470170.34741002</real>
 	<key>PointerActions</key>
 	<dict>
 		<key>Button,1,1,,</key>
@@ -1495,21 +1499,29 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>~/.config/iterm2/</string>
+	<string>~/.config/iterm2</string>
+	<key>SUAutomaticallyUpdate</key>
+	<true/>
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedAlternateAppNameKey</key>
 	<string>iTerm</string>
 	<key>SUFeedURL</key>
-	<string>https://iterm2.com/appcasts/final.xml?shard=35</string>
+	<string>https://iterm2.com/appcasts/final.xml?shard=7</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2019-06-05T00:38:47Z</date>
+	<date>2019-06-11T14:21:28Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
+	<key>SuppressRestartAnnouncement</key>
+	<true/>
+	<key>UKCrashReporterLastCrashReportDate</key>
+	<real>1524067200</real>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
+	<key>findMode_iTerm</key>
+	<integer>0</integer>
 	<key>iTerm Version</key>
 	<string>3.2.9</string>
 </dict>
