--- a/.config/.tmux.conf
+++ b/.config/.tmux.conf
@@ -7,7 +7,7 @@ bind '"' split-window -h -c '#{pane_current_path}'
 bind % split-window -c '#{pane_current_path}'
 
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file $XDG_CONFIG_HOME/.tmux.conf
+bind r source-file ~/.config/.tmux.conf
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
