--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,14 +1,7 @@
-# font_family      Monaco
-# bold_font        Monaco Medium
-# italic_font      Monaco Italic
-# bold_italic_font Monaco Medium Italic 
-
-# font_size 12.0
-
 map kitty_mod+t no
-macos_hide_titlebar yes
+hide_window_decorations yes
 
-include ./font.conf
+include ./fonts.conf
 include ./mouse.conf
 include ./cursor.conf
 include ./scrollback.conf
