--- a/.config/kitty/fonts.conf
+++ b/.config/kitty/fonts.conf
@@ -16,13 +16,13 @@
 #: families that have many weight variants like Book, Medium, Thick,
 #: etc. For example::
 
-font_family      Operator Mono Book
-bold_font        Operator Mono Medium
-italic_font      Operator Mono Book Italic
-bold_italic_font Operator Mono Medium Italic
+font_family      SF Mono Regular
+italic_font      SF Mono Italic
+bold_font        SF Mono Bold
+bold_italic_font SF Mono Bold Italic
 
 #: Font size (in pts)
-font_size 18.0
+font_size 11.0
 
 # adjust_line_height  0
 # adjust_column_width 0
