--- a/.config/kitty/window.conf
+++ b/.config/kitty/window.conf
@@ -41,7 +41,7 @@ draw_minimal_borders yes
 #: that setting a non-zero window margin overrides this and causes all
 #: borders to be drawn.
 
-window_margin_width 0.0
+window_margin_width 1.0
 
 #: The window margin (in pts) (blank area outside the border)
 
@@ -84,7 +84,7 @@ inactive_text_alpha 1.0
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations no
+hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders). Whether
 #: this works and exactly what effect it has depends on the window
