typo in default bindings

--- a/.config/.tmux.conf
+++ b/.config/.tmux.conf
@@ -3,8 +3,8 @@ if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-t
 
 # Open new splits/panes in the current working directory
 bind c new-window -c '#{pane_current_path}'
-bind '"' split-window -h -c '#{pane_current_path}'
-bind % split-window -c '#{pane_current_path}'
+bind % split-window -h -c '#{pane_current_path}'
+bind '"' split-window -c '#{pane_current_path}'
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.config/.tmux.conf
