--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/zsh-users/zsh-syntax-highlighting
 [submodule ".vim/fonts"]
 	path = .vim/fonts
-	url = https://github.com/powerline/fonts ~/.vim/fonts
+	url = https://github.com/powerline/fonts
 [submodule ".config/zsh/plugins/zsh-completions"]
 	path = .config/zsh/plugins/zsh-completions
 	url = https://github.com/zsh-users/zsh-completions
