gruvbox all the things

--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,2 +1,5 @@
-background            #161718
-foreground            #b7bcb9
+/* background            #161718
+ * foreground            #b7bcb9 */
+
+
+include kitty-themes/themes/gruvbox_dark.conf
