bindings for pane re-size

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,7 +7,13 @@ bind % split-window -h -c '#{pane_current_path}'
 bind '"' split-window -c '#{pane_current_path}'
 
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.config/.tmux.conf
+bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf
+
+# resizing splits
+bind-key -r J resize-pane -D 10
+bind-key -r K resize-pane -U 10
+bind-key -r H resize-pane -L 10
+bind-key -r L resize-pane -R 10
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
