fixed some junk

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -35,7 +35,7 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 
 # Set default terminal to xterm
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 # Renumber windows after closing
 set-option -g renumber-windows on
