bash clean up and unbind kitty shortcuts

--- a/.config/kitty/keybindings.conf
+++ b/.config/kitty/keybindings.conf
@@ -197,6 +197,22 @@
 # map kitty_mod+alt+t set_tab_title
 # map shift+cmd+i     set_tab_title
 
+
+map kitty_mod+right no_op
+map ctrl+tab        no_op
+map shift+cmd+]     no_op
+map kitty_mod+left  no_op
+map shift+ctrl+tab  no_op
+map shift+cmd+[     no_op
+map kitty_mod+t     no_op
+map cmd+t           no_op
+map kitty_mod+q     no_op
+map cmd+w           no_op
+map kitty_mod+.     no_op
+map kitty_mod+,     no_op
+map kitty_mod+alt+t no_op
+map shift+cmd+i     no_op
+
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
 #: tab::
