--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,7 +7,7 @@ bind % split-window -h -c '#{pane_current_path}'
 bind '"' split-window -c '#{pane_current_path}'
 
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf
+bind r source-file "$XDG_CONFIG_HOME/tmux/tmux.conf"
 
 # resizing splits
 bind-key -r J resize-pane -D 10
