disable new window binding

--- a/.config/kitty/keybindings.conf
+++ b/.config/kitty/keybindings.conf
@@ -212,6 +212,8 @@ map kitty_mod+.     no_op
 map kitty_mod+,     no_op
 map kitty_mod+alt+t no_op
 map shift+cmd+i     no_op
+map cmd+n           no_op
+map cmd+enter       no_op
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
