openssl cert and fp utils

--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,5 +1,1 @@
-/* background            #161718
- * foreground            #b7bcb9 */
-
-
-include themes/themes/gruvbox_dark.conf
+themes/themes/gruvbox_dark.conf
