--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -51,3 +51,20 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # theme
 source-file "$XDG_CONFIG_HOME/tmux/theme.conf"
+
+
+### START THEME ###
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @plugin 'dracula/tmux'
+set -g @dracula-show-battery false
+set -g @dracula-show-network false
+set -g @dracula-show-weather false
+set -g @dracula-show-left-icon session
+
+set -g @dracula-cpu-usage true
+set -g @dracula-ram-usage true
+set -g @dracula-show-powerline true
+
+run "$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm"
+### END THEME ###
