--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -50,7 +50,7 @@ set-option -g set-titles on
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # theme
-source-file "$XDG_CONFIG_HOME/tmux/theme.conf"
+source-file "$XDG_CONFIG_HOME/tmux/themes/$TMUX_THEME.conf"
 
 
 ### START THEME ###
